kubernetes/apps/homelab-demo/middleware-strip-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: demo-apps-strip-prefix
  namespace: homelab-demo
spec:
  stripPrefix:
    prefixes:
      - /demo-app-1
      - /demo-app-2
