kubernetes/apps/homelab-demo/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-apps
  namespace: homelab-demo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hld.chammanganti.dev`) && PathPrefix(`/demo-app-1`)
      services:
        - name: demo-app-1
          port: 80
          scheme: https
          serversTransport: argocd-transport
      middlewares:
        - name: demo-apps-strip-prefix
    - kind: Rule
      match: Host(`hld.chammanganti.dev`) && PathPrefix(`/demo-app-2`)
      services:
        - name: demo-app-2
          port: 80
          scheme: https
          serversTransport: argocd-transport
      middlewares:
        - name: demo-apps-strip-prefix
  tls:
    secretName: demo-apps-tls
